@@ -11,9 +11,10 @@ StatDensity2d <- proto(Stat, {
   )
   icon <- function(.) GeomDensity2d$icon()
 
-  calculate <- function(., data, scales, ...) {
+  calculate <- function(., data, scales, na.rm = FALSE, ...) {
     df <- data.frame(data[, c("x", "y")])
-    df <- df[complete.cases(df), ]
+    df <- remove.missing(df, na.rm, name = "stat_density2d")
+
     dens <- do.call(MASS::kde2d, c(df, n=100, ...))
     df <- with(dens, data.frame(expand.grid(x = x, y = y), z = as.vector(z)))
     
